--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 body {
     font-family: system-ui, -apple-system, sans-serif;
     background-color: #f0f0f0;
-   
+    
+  
 }
 
 .container {
@@ -156,6 +157,12 @@ body {
     height: 760px;
     top: -60px;
     left: 600px;
+}
+.line-pipe-4 {
+    width: 120px;
+    height: 60px;
+    top: 560px;
+    left: 95px;
 }
 
 .line-pipe-3 {
