--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 
 body {
   font-family: system-ui, -apple-system, sans-serif;
-
+  background-image:url(./assets/background.jpg) ;
+    background-size: cover;
 background-repeat: no-repeat;
   background-attachment: fixed  ;
 }
 
 .container {
   width: 950px;
-    background-image:url(./assets/background.jpg) ;
+  
   height: 650px;
   padding-left: 15%;
 }
@@ -23,10 +24,10 @@ background-repeat: no-repeat;
     padding-top: 5px;
   height: 80px;
   width: 100%;
-background-color:gray;
+   background-color:#ecedb4;
   padding-right: 16px;
   display: flex;
-  justify-content: space-between;
+  justify-content:left;
   align-items: center;
 }
 
@@ -39,7 +40,7 @@ background-color:gray;
 }
 
 .instruction-label {
-  color: #ced1d4;
+  color: #141515;
   white-space: nowrap;
   margin-right: 8px;
 }
